@@ -1,0 +1,97 @@
+rup_mag,dist_rrup,site_vs30,result_type,damping,rsd575
+5,1,200,TOTAL_STDDEV,5,0.474136161877577
+5,1,500,TOTAL_STDDEV,5,0.474136161877577
+5,1,1000,TOTAL_STDDEV,5,0.474136161877577
+5,1,1200,TOTAL_STDDEV,5,0.474136161877577
+5,10,200,TOTAL_STDDEV,5,0.474136161877577
+5,10,500,TOTAL_STDDEV,5,0.474136161877577
+5,10,1000,TOTAL_STDDEV,5,0.474136161877577
+5,10,1200,TOTAL_STDDEV,5,0.474136161877577
+5,50,200,TOTAL_STDDEV,5,0.474136161877577
+5,50,500,TOTAL_STDDEV,5,0.474136161877577
+5,50,1000,TOTAL_STDDEV,5,0.474136161877577
+5,50,1200,TOTAL_STDDEV,5,0.474136161877577
+5,100,200,TOTAL_STDDEV,5,0.474136161877577
+5,100,500,TOTAL_STDDEV,5,0.474136161877577
+5,100,1000,TOTAL_STDDEV,5,0.474136161877577
+5,100,1200,TOTAL_STDDEV,5,0.474136161877577
+5,150,200,TOTAL_STDDEV,5,0.474136161877577
+5,150,500,TOTAL_STDDEV,5,0.474136161877577
+5,150,1000,TOTAL_STDDEV,5,0.474136161877577
+5,150,1200,TOTAL_STDDEV,5,0.474136161877577
+5,200,200,TOTAL_STDDEV,5,0.474136161877577
+5,200,500,TOTAL_STDDEV,5,0.474136161877577
+5,200,1000,TOTAL_STDDEV,5,0.474136161877577
+5,200,1200,TOTAL_STDDEV,5,0.474136161877577
+6,1,200,TOTAL_STDDEV,5,0.474136161877577
+6,1,500,TOTAL_STDDEV,5,0.474136161877577
+6,1,1000,TOTAL_STDDEV,5,0.474136161877577
+6,1,1200,TOTAL_STDDEV,5,0.474136161877577
+6,10,200,TOTAL_STDDEV,5,0.474136161877577
+6,10,500,TOTAL_STDDEV,5,0.474136161877577
+6,10,1000,TOTAL_STDDEV,5,0.474136161877577
+6,10,1200,TOTAL_STDDEV,5,0.474136161877577
+6,50,200,TOTAL_STDDEV,5,0.474136161877577
+6,50,500,TOTAL_STDDEV,5,0.474136161877577
+6,50,1000,TOTAL_STDDEV,5,0.474136161877577
+6,50,1200,TOTAL_STDDEV,5,0.474136161877577
+6,100,200,TOTAL_STDDEV,5,0.474136161877577
+6,100,500,TOTAL_STDDEV,5,0.474136161877577
+6,100,1000,TOTAL_STDDEV,5,0.474136161877577
+6,100,1200,TOTAL_STDDEV,5,0.474136161877577
+6,150,200,TOTAL_STDDEV,5,0.474136161877577
+6,150,500,TOTAL_STDDEV,5,0.474136161877577
+6,150,1000,TOTAL_STDDEV,5,0.474136161877577
+6,150,1200,TOTAL_STDDEV,5,0.474136161877577
+6,200,200,TOTAL_STDDEV,5,0.474136161877577
+6,200,500,TOTAL_STDDEV,5,0.474136161877577
+6,200,1000,TOTAL_STDDEV,5,0.474136161877577
+6,200,1200,TOTAL_STDDEV,5,0.474136161877577
+7,1,200,TOTAL_STDDEV,5,0.474136161877577
+7,1,500,TOTAL_STDDEV,5,0.474136161877577
+7,1,1000,TOTAL_STDDEV,5,0.474136161877577
+7,1,1200,TOTAL_STDDEV,5,0.474136161877577
+7,10,200,TOTAL_STDDEV,5,0.474136161877577
+7,10,500,TOTAL_STDDEV,5,0.474136161877577
+7,10,1000,TOTAL_STDDEV,5,0.474136161877577
+7,10,1200,TOTAL_STDDEV,5,0.474136161877577
+7,50,200,TOTAL_STDDEV,5,0.474136161877577
+7,50,500,TOTAL_STDDEV,5,0.474136161877577
+7,50,1000,TOTAL_STDDEV,5,0.474136161877577
+7,50,1200,TOTAL_STDDEV,5,0.474136161877577
+7,100,200,TOTAL_STDDEV,5,0.474136161877577
+7,100,500,TOTAL_STDDEV,5,0.474136161877577
+7,100,1000,TOTAL_STDDEV,5,0.474136161877577
+7,100,1200,TOTAL_STDDEV,5,0.474136161877577
+7,150,200,TOTAL_STDDEV,5,0.474136161877577
+7,150,500,TOTAL_STDDEV,5,0.474136161877577
+7,150,1000,TOTAL_STDDEV,5,0.474136161877577
+7,150,1200,TOTAL_STDDEV,5,0.474136161877577
+7,200,200,TOTAL_STDDEV,5,0.474136161877577
+7,200,500,TOTAL_STDDEV,5,0.474136161877577
+7,200,1000,TOTAL_STDDEV,5,0.474136161877577
+7,200,1200,TOTAL_STDDEV,5,0.474136161877577
+8,1,200,TOTAL_STDDEV,5,0.474136161877577
+8,1,500,TOTAL_STDDEV,5,0.474136161877577
+8,1,1000,TOTAL_STDDEV,5,0.474136161877577
+8,1,1200,TOTAL_STDDEV,5,0.474136161877577
+8,10,200,TOTAL_STDDEV,5,0.474136161877577
+8,10,500,TOTAL_STDDEV,5,0.474136161877577
+8,10,1000,TOTAL_STDDEV,5,0.474136161877577
+8,10,1200,TOTAL_STDDEV,5,0.474136161877577
+8,50,200,TOTAL_STDDEV,5,0.474136161877577
+8,50,500,TOTAL_STDDEV,5,0.474136161877577
+8,50,1000,TOTAL_STDDEV,5,0.474136161877577
+8,50,1200,TOTAL_STDDEV,5,0.474136161877577
+8,100,200,TOTAL_STDDEV,5,0.474136161877577
+8,100,500,TOTAL_STDDEV,5,0.474136161877577
+8,100,1000,TOTAL_STDDEV,5,0.474136161877577
+8,100,1200,TOTAL_STDDEV,5,0.474136161877577
+8,150,200,TOTAL_STDDEV,5,0.474136161877577
+8,150,500,TOTAL_STDDEV,5,0.474136161877577
+8,150,1000,TOTAL_STDDEV,5,0.474136161877577
+8,150,1200,TOTAL_STDDEV,5,0.474136161877577
+8,200,200,TOTAL_STDDEV,5,0.474136161877577
+8,200,500,TOTAL_STDDEV,5,0.474136161877577
+8,200,1000,TOTAL_STDDEV,5,0.474136161877577
+8,200,1200,TOTAL_STDDEV,5,0.474136161877577
